Fixed overflow height and product page

--- a/products/style.css
+++ b/products/style.css
@@ -137,7 +137,6 @@ img {
 }
 
 .slide_buttons {
-  padding-left: 5px;
   display: inline-flex;
   gap: 5px;
   text-decoration: none;
@@ -157,12 +156,18 @@ img {
   align-items: center;
 }
 
-.price p {
-  padding-left: 5px;
+.product_price {
   font-size: x-large;
   color: blue;
   font-weight: bold;
   margin: 5px 0px;
+}
+
+.original_price {
+  font-weight: bold;
+  margin: 5px 0px;
+  text-decoration: line-through;
+  color: red;
 }
 
 .buttons {
